[package]
name = "bb8-bolt"
version = "0.3.0"
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
description = "A bolt-client adaptor for the bb8 connection pool.\n"
repository = "https://github.com/lucis-fluxum/bolt-rs"
categories = ["asynchronous"]
keywords = ["bolt", "database", "pool", "neo4j", "bb8"]
license = "MIT"
edition = "2018"

[dev-dependencies]
tokio = { version = "0.2.21", features = ["rt-core", "rt-threaded", "macros"] }
futures = { version = "0.3.5", features = [] }

[dependencies]
bolt-client = { path = "../bolt-client", version = "0.6.0" }
bolt-proto = { path = "../bolt-proto", version = "0.7.0" }

async-trait = "0.1.31"
bb8 = "0.4.2"
thiserror = "1.0.18"
