[package]
name = "bb8-bolt"
version = "0.4.0"
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
description = "A bolt-client adaptor for the bb8 connection pool.\n"
repository = "https://github.com/lucis-fluxum/bolt-rs"
categories = ["asynchronous"]
keywords = ["bolt", "database", "pool", "neo4j", "bb8"]
license = "MIT"
edition = "2018"

[dependencies]
async-trait = "0.1.40"
bolt-client = { path = "../bolt-client", version = "0.7.0", features = ["tokio-stream"] }
bolt-proto = { path = "../bolt-proto", version = "0.8.0" }
bb8 = "0.4.2"
thiserror = "1.0.20"
tokio = { version = "0.2.22", features = ["dns", "io-util"] }
tokio-util = { version = "0.3.1", features = ["compat"] }

[dev-dependencies]
futures-util = { version = "0.3.5", default-features = false, features = ["alloc"] }
tokio = { version = "0.2.22", features = ["macros", "rt-threaded"] }
