[package]
name = "bb8-bolt"
version = "0.6.0"
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
description = "A bolt-client adaptor for the bb8 connection pool.\n"
repository = "https://github.com/lucis-fluxum/bolt-rs"
categories = ["asynchronous"]
keywords = ["bolt", "database", "pool", "neo4j", "bb8"]
license = "MIT"
edition = "2018"

[dependencies]
async-trait = "0.1.48"
bolt-client = { path = "../bolt-client", version = "0.9.0", features = ["tokio-stream"] }
bolt-proto = { path = "../bolt-proto", version = "0.9.0" }
bb8 = "0.7.0"
thiserror = "1.0.24"
tokio = { version = "1.4.0", features = ["io-util", "net"] }
tokio-util = { version = "0.6.5", features = ["compat"] }

[dev-dependencies]
futures-util = { version = "0.3.13", default-features = false, features = ["alloc"] }
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
