[package]
name = "bolt-client-macros"
version = "0.1.1"
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
description = "Procedural macros for bolt-client.\n"
repository = "https://github.com/lucis-fluxum/bolt-rs"
keywords    = ["bolt", "client", "macros"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.40", features = ["full", "extra-traits"] }
quote = "1.0.7"
