[package]
name = "bolt-client-macros"
version = "0.2.0"
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
description = "Procedural macros for bolt-client.\n"
repository = "https://github.com/lucis-fluxum/bolt-rs"
keywords    = ["bolt", "client", "macros"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.60", features = ["extra-traits", "full"] }
quote = "1.0.9"
