[package]
name = "bolt-client-macros"
version = "0.2.1"
description = "Procedural macros for bolt-client.\n"
repository = "https://github.com/0xSiO/bolt-rs"
keywords    = ["bolt", "client", "macros"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.0", features = ["extra-traits", "full"] }
quote = "1.0.0"
