[package]
name = "bolt-client"
version = "0.7.0"
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
description = "A client that sends messages using the Bolt protocol.\n"
readme = "README.md"
repository = "https://github.com/lucis-fluxum/bolt-rs"
categories  = ["network-programming", "database", "asynchronous", "encoding"]
keywords    = ["bolt", "client", "neo4j"]
license = "MIT"
edition = "2018"

[features]
tokio-stream = ["pin-project", "tokio", "tokio-rustls", "webpki-roots"]

[dependencies]
bolt-client-macros = { path = "../bolt-client-macros", version = "0.1.1" }
bolt-proto = { path = "../bolt-proto", version = "0.8.0" }
bytes = "0.5.6"
futures-util = { version = "0.3.5", default-features = false, features = ["io"] }
thiserror = "1.0.20"

# Feature: tokio-stream
pin-project = { version = "0.4.23", optional = true }
tokio = { version = "0.2.22", features = ["io-util", "tcp"], optional = true }
tokio-rustls = { version = "0.14.1", optional = true }
webpki-roots = { version = "0.20.0", optional = true }

[dev-dependencies]
chrono = { version = "0.4.15", default-features = false, features = ["std"] }
tokio = { version = "0.2.22", features = ["dns", "macros", "rt-threaded"] }
tokio-util = { version = "0.3.1", features = ["compat"] }
