[package]
name = "bolt-client"
version = "0.9.0"
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
description = "A client that sends messages using the Bolt protocol.\n"
readme = "README.md"
repository = "https://github.com/lucis-fluxum/bolt-rs"
categories  = ["network-programming", "database", "asynchronous", "encoding"]
keywords    = ["bolt", "client", "neo4j"]
license = "MIT"
edition = "2018"

[features]
tokio-stream = ["pin-project", "tokio", "tokio-rustls", "webpki-roots"]

[dependencies]
bolt-client-macros = { path = "../bolt-client-macros", version = "0.2.0" }
bolt-proto = { path = "../bolt-proto", version = "0.9.0" }
bytes = "1.0.1"
futures-util = { version = "0.3.13", default-features = false, features = ["io"] }
thiserror = "1.0.24"

# Feature: tokio-stream
pin-project = { version = "1.0.6", optional = true }
tokio = { version = "1.4.0", features = ["io-util", "net"], optional = true }
tokio-rustls = { version = "0.22.0", optional = true }
webpki-roots = { version = "0.21.0", optional = true }

[dev-dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["std"] }
tokio = { version = "1.4.0", features = ["macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.6.5", features = ["compat"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
