[package]
name = "bolt-proto-derive"
version = "0.5.2"
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
description = "Procedural macros for bolt-proto.\n"
repository = "https://github.com/lucis-fluxum/bolt-rs"
keywords    = ["bolt", "derive"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.0", features = ["extra-traits", "full"] }
quote = "1.0.0"
