[package]
name = "bolt-proto-derive"
version = "0.5.2"
description = "Procedural macros for bolt-proto.\n"
repository = "https://github.com/0xSiO/bolt-rs"
keywords    = ["bolt", "derive"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.0", features = ["extra-traits", "full"] }
quote = "1.0.0"
