[package]
name = "bolt-proto-derive"
version = "0.6.0"
description = "Procedural macros for bolt-proto."
repository = "https://github.com/0xSiO/bolt-rs"
keywords    = ["bolt", "derive"]
license = "MPL-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.0", features = ["extra-traits", "full"] }
quote = "1.0.0"
