[package]
name = "bolt-proto"
version = "0.10.0"
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
description = "Bolt protocol primitives: values, messages, and serialization / deserialization.\n"
readme = "README.md"
repository = "https://github.com/lucis-fluxum/bolt-rs"
categories  = ["network-programming", "database", "encoding"]
keywords    = ["bolt", "protocol", "neo4j"]
license = "MIT"
edition = "2018"

[dependencies]
bolt-proto-derive = { path = "../bolt-proto-derive", version = "0.5.0" }
bytes = "1.0.1"
chrono = { version = "0.4.19", default-features = false, features = ["std"] }
chrono-tz = "0.5.3"
futures-util = { version = "0.3.13", default-features = false, features = ["io"] }
thiserror = "1.0.24"
