[package]
name = "bolt-proto"
version = "0.11.0"
description = "Bolt protocol primitives: values, messages, and serialization / deserialization."
readme = "README.md"
repository = "https://github.com/0xSiO/bolt-rs"
categories  = ["network-programming", "database", "encoding"]
keywords    = ["bolt", "protocol", "neo4j"]
license = "MIT"
edition = "2021"

[dependencies]
bolt-proto-derive = { path = "../bolt-proto-derive", version = "0.6.0" }
bytes = "1.1.0"
chrono = { version = "0.4.0", default-features = false, features = ["std"] }
chrono-tz = "0.6.0"
futures-util = { version = "0.3.0", default-features = false, features = ["io"] }
thiserror = "1.0.0"
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
