[package]
name = "deadpool-bolt"
version = "0.1.0"
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
description = "A bolt-client manager for the deadpool connection pool.\n"
repository = "https://github.com/lucis-fluxum/bolt-rs"
categories = ["asynchronous"]
keywords = ["bolt", "database", "pool", "neo4j", "deadpool"]
license = "MIT"
edition = "2018"

[dependencies]
async-trait = "0.1.48"
bolt-client = { path = "../bolt-client", version = "0.9.0", features = ["tokio-stream"] }
bolt-proto = { path = "../bolt-proto", version = "0.10.0" }
deadpool = "0.7.0"
thiserror = "1.0.24"
tokio = { version = "1.4.0", features = ["io-util", "net"] }
tokio-util = { version = "0.6.5", features = ["compat"] }

[dev-dependencies]
futures-util = { version = "0.3.13", default-features = false, features = ["alloc"] }
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
