[package]
name = "deadpool-bolt"
version = "0.1.0"
description = "A bolt-client manager for the deadpool connection pool."
repository = "https://github.com/0xSiO/bolt-rs"
categories = ["asynchronous"]
keywords = ["bolt", "database", "pool", "neo4j", "deadpool"]
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1.0"
bolt-client = { path = "../bolt-client", version = "0.10.0", features = ["tokio-stream"] }
deadpool = { version = "0.9.0", default-features = false, features = ["managed", "rt_tokio_1"] } 
tokio = { version = "1.23.0", features = ["io-util", "net"] }
tokio-util = { version = "0.7.0", features = ["compat"] }

[dev-dependencies]
futures-util = { version = "0.3.0", default-features = false, features = ["alloc"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
