[package]
name = "mobc-bolt"
version = "0.0.0"
description = "A bolt-client manager for the mobc connection pool.\n"
repository = "https://github.com/0xSiO/bolt-rs"
categories = ["asynchronous"]
keywords = ["bolt", "database", "pool", "neo4j", "mobc"]
license = "MIT"
edition = "2018"

[dependencies]
async-trait = "0.1.0"
bolt-client = { path = "../bolt-client", version = "0.9.0", features = ["tokio-stream"] }
bolt-proto = { path = "../bolt-proto", version = "0.10.0" }
mobc = "0.7.0"
thiserror = "1.0.0"
tokio = { version = "1.8.0", features = ["io-util", "net"] }
tokio-util = { version = "0.6.0", features = ["compat"] }

[dev-dependencies]
futures-util = { version = "0.3.0", default-features = false, features = ["alloc"] }
tokio = { version = "1.8.0", features = ["macros", "rt-multi-thread"] }
